<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightLightGray"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/app_profile_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:background="@drawable/gradient_background"
            >
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center"
            >
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/app_logo_profile"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/tv_logo_profile"
                android:padding="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/app_version_info"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="cursive"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="28sp"/>
                    <TextView
                        android:id="@+id/app_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:paddingStart="0dp"
                        android:paddingEnd="12dp"
                        android:text="@string/app_version"
                        android:textStyle="italic"
                        android:textAlignment="center"
                        android:textSize="27sp"
                        android:textColor="@color/colorWhite"
                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/app_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="8dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/app_description"
                    android:maxLines="1"
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="19sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="20dp"
                    android:paddingStart="0dp"
                    android:paddingEnd="2dp"
                    android:gravity="start"
                    android:textSize="13sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/email_copyright"
                    />
            </LinearLayout>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginEnd="52dp"
            android:layout_marginTop="150dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="8dp"
            android:layout_marginBottom="15dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp"
                android:paddingHorizontal="28dp"
                android:weightSum="11">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/channels_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/startBlue"
                        android:textSize="40sp" />
                    <TextView
                        android:id="@+id/channels_count_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Total Channels"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="normal" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/fav_channels_count"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text=""
                        android:textAlignment="center"
                        android:textColor="@color/startBlue"
                        android:textSize="40sp" />
                    <TextView
                        android:id="@+id/fav_channels_count_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Favorites"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/channel_load_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:elevation="3dp"
        app:layout_constraintTop_toBottomOf="@id/app_profile_bar"
        app:cardCornerRadius="12dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginVertical="10dp">
            <LinearLayout
                android:id="@+id/channel_load_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:id="@+id/load_channels_title"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:layout_gravity="left"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="5dp"
                        android:text="@string/loading_channel_from_m3u"
                        android:paddingStart="0dp"
                        android:paddingEnd="12dp"
                        android:textStyle="italic"
                        android:textAlignment="center"
                        android:textSize="16sp"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <EditText
                            android:id="@+id/playlist_url"
                            android:layout_width="match_parent"
                            android:layout_height="36dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:background="@drawable/search_bg"
                            android:drawableStart="@drawable/ic_link"
                            android:hint="@string/loading_channel_hint"
                            android:inputType="textUri"
                            android:maxLines="1"
                            android:textSize="13sp"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="6dp"/>

                        <Button
                            android:id="@+id/load_url_button"
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical|end"
                            android:gravity="center"
                            android:layout_marginEnd="18dp"
                            android:layout_marginVertical="5dp"
                            android:textStyle="normal"
                            android:textSize="13sp"
                            android:textAllCaps="false"
                            android:text="Load"
                            android:textColor="@color/colorWhite"
                            android:background="@drawable/button_style_load"
                            />
                    </FrameLayout>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.9dp"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="10dp"
                    android:background="?android:attr/listDivider"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/channels_action_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/add_channel_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginVertical="12dp"
                    android:background="@drawable/button_style"
                    android:drawableTop="@drawable/ic_add"
                    android:text="Add Channel Manually"
                    android:maxLines="2"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp"
                    android:textStyle="normal"
                    android:layout_marginHorizontal="8dp"
                    />

                <Button
                    android:id="@+id/load_default_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/button_style"
                    android:gravity="center"
                    android:drawableTop="@drawable/ic_download"
                    android:text="Load Sample Channels"
                    android:maxLines="2"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp"
                    android:textStyle="normal"
                    android:layout_marginHorizontal="8dp"/>

                <Button
                    android:id="@+id/remove_all_button"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginVertical="12dp"
                    android:background="@drawable/button_style"
                    android:gravity="center"
                    android:drawableTop="@drawable/ic_delete"
                    android:text="Remove All Channels"
                    android:maxLines="2"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp"
                    android:textStyle="normal"
                    android:layout_marginHorizontal="8dp"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:id="@+id/notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notice"
            android:textColor="@color/colorDarkGray"
            android:textSize="10sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>